sms/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: myweb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: myweb2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: myweb2
status:
  loadBalancer: {}
