sms/tomcat-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: mywas
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mywas
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: mywas2
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mywas2
status:
  loadBalancer: {}
